# ocaml-spectrum

./: README.md  dune-project  spectrum.opam
lib/: capabilities.ml  dune
